# duckdb-diskcache

./: CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml
src/: disk_cache.cpp  disk_cache_extension.cpp  disk_cache_fs_wrapper.cpp  diskcache.cpp  diskcache_extension.cpp  diskcache_fs_wrapper.cpp
src/include/: disk_cache.hpp  disk_cache_fs_wrapper.hpp  diskcache.hpp  diskcache_extension.hpp  diskcache_fs_wrapper.hpp
test/sql/: disk_cache.test  diskcache.test  ducklake.test
